--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ input[type='color']:hover {
 }
 
 .box {
-    width: 4px;
-    height: 4px;
+    width: 10px;
+    height: 10px;
     background-color: white;
+    user-select: none;
 }
