add mode selection function

--- a/style.css
+++ b/style.css
@@ -28,18 +28,41 @@ button {
   }
 
 button.active {
-    background-color: black;
+    background-color: rgb(108, 104, 104);
     color: white;
 }
 
 button,
 input[type='color'] {
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.1s ease-in-out;
 }
 
 button:hover,
 input[type='color']:hover {
     transform: scale(1.05);
+}
+
+input[type='color']:active {
+    transition: transform 0.05s ease-in-out;
+    transform: scale(1);
+}
+
+input[type='color'] {
+    -webkit-appearance: none;
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+    border: none;
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+  
+input[type='color']::-webkit-color-swatch {
+    border: none;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .container {
